--- a/internal/templates/client-templates/templates/pages/index.html
+++ b/internal/templates/client-templates/templates/pages/index.html
@@ -1,156 +1,9 @@
 {{define "content"}}
-<section class="cap cap_index">
-    <div class="cap__cont cont">
-      <div class="cap__block">
-        <h1 class="cap__caption caption">Задник из кожкартона</h1>
-        <h2 class="cap__subtitle text">от производителя</h2>
-        <a class="cap__button button-orange text-big" href="#book-discount" data-role="scroll-to-anchor">Заказать</a>
-      </div>
-      <picture class="cap__picture">
-        <img class="cap__image" src="/static/client/images/cap/zadnik-cap.png" alt="Задник из кожкартона" loading="lazy">
-      </picture>
-    </div>
-</section>
-<div class="products" data-element="products" id="products">
-    <div class="products__cont cont">
-      <h2 class="products__title title">Товары</h2>
-      <ul class="products__list">
-        {{range .Products}}
-        <li class="products__item">
-          <img class="products__image" src="{{.ImageURL.String}}" alt="{{.Name}} - фото" loading="lazy">
-          <span class="products__name">Модель: {{.Name}}</span>
-          <span class="products__price">{{.Price}} ₽</span>
-        </li>
-        {{end}}
-      </ul>
-    </div>
-</div>
-<article class="showcase">
-    <div class="showcase__cont cont">
-      <span class="showcase__title title">Чем хорош задник из кожкартона?</span>
-      <div class="showcase__list">
-        <div class="showcase__item">
-          <img class="showcase__image" src="/static/client/images/showcase/showcase-1.svg" alt="#">
-          <span class="showcase__headline headline">Повышенная прочность</span>
-        </div>
-        <div class="showcase__item">
-          <img class="showcase__image" src="/static/client/images/showcase/showcase-2.svg" alt="#">
-          <span class="showcase__headline headline">Анатомическая форма</span>
-        </div>
-        <div class="showcase__item">
-          <img class="showcase__image" src="/static/client/images/showcase/showcase-3.svg" alt="#">
-          <span class="showcase__headline headline">Влагоустойчивость</span>
-        </div>
-        <div class="showcase__item">
-          <img class="showcase__image" src="/static/client/images/showcase/showcase-4.svg" alt="#">
-          <span class="showcase__headline headline">Экологичность</span>
-        </div>
-        <div class="showcase__item">
-          <img class="showcase__image" src="/static/client/images/showcase/showcase-5.svg" alt="#">
-          <span class="showcase__headline headline">Комфорт при носке</span>
-        </div>
-        <div class="showcase__item">
-          <img class="showcase__image" src="/static/client/images/showcase/showcase-6.svg" alt="#">
-          <span class="showcase__headline headline">Легкость</span>
-        </div>
-      </div>
-    </div>
-</article>
-<article class="production">
-    <div class="production__cont cont">
-      <span class="production__title title">О производстве</span>
-      <div class="production__area">
-        <div class="production__info">
-          <p class="production__text text-big">Один из лидеров по продажам задника в Кировской области</p>
-          <ul class="production__list">
-            <li class="production__item text-big">Компания с 15-летней историей на рынке</li>
-            <li class="production__item text-big">С 2010 года компания осуществляет безперебойное производство задника из кожкартона и стелек для обуви</li>
-          </ul>
-          <p class="production__offer text-big">Изготовим задник из кожкартона специально для вас: изменим фасон, выберем модификацию и подберем индивидуальный размер</p>
-        </div>
-        <picture class="production__picture">
-          <source srcset="/static/client/images/about/about-1_476.webp 1x, /static/client/images/about/about-1_714.webp 1.5x" type="image/webp">
-          <source srcset="/static/client/images/about/about-1_476.jpg 1x, /static/client/images/about/about-1_714.jpg 1.5x">
-          <img class="production__image" src="/static/client/images/about/about-1_476.jpg" alt="Производитель задника из кожкартона и стелек - фото" title="Производитель задника из кожкартона и стелек" loading="lazy">
-        </picture>
-      </div>
-    </div>
-</article>
-<div class="orders">
-    <div class="orders__cont cont">
-      <span class="orders__title title">Как сделать заказ?</span>
-      <ol class="orders__list">
-        <li class="orders__item">
-          <span class="orders__headline">Оставьте заявку</span>
-          <p class="orders__text text">Заполните форму заказа на сайте</p>
-        </li>
-        <li class="orders__item">
-          <span class="orders__headline">Подтвердите заказ</span>
-          <p class="orders__text text">Мы свяжемся с вами, поможем в выборе модели, согласуем характеристики и стоимость</p>
-        </li>
-        <li class="orders__item">
-          <span class="orders__headline">Изготовление</span>
-          <p class="orders__text text">Производство изготовит заказ</p>
-        </li>
-        <li class="orders__item">
-          <span class="orders__headline">Получите заказ</span>
-          <p class="orders__text text">Доставка по РФ от 6 рабочих дней</p>
-        </li>
-      </ol>
-    </div>
-</div>
-<div class="order-form" id="order-form">
-    <div class="order-form__cont cont">
-      <div class="order-form__wrapper">
-        <h2 class="order-form__title title">Заказать столы лофт</h2>
-        <p class="order-form__text text-big">Оставьте заявку, менеджер свяжется с вами для уточнения деталей</p>
-        <form class="order-form__form" data-role="feedback-form">
-          <div id="captcha-container"></div>
-          <input type="hidden" name="form_number" value="100">
-          <input type="hidden" name="form_name" value="Форма заказать мебель лофт">
-          <div class="order-form__input-box">
-            <input class="order-form__input order-form__input_name input text" type="text" placeholder="Имя" name="name">
-          </div>
-          <div class="order-form__input-box">
-            <input class="order-form__input order-form__input_phone input text" type="tel" placeholder="Телефон*" name="phone" data-role="feedback-form__phone-input">
-            <span class="order-form__text-error text-error text-error_hide" data-role="feedback-form__text-error">*Неверный номер телефона</span>
-          </div>
-          <div class="order-form__btn-box order-form__input-box_name">
-            <button class="order-form__button button-orange text" data-role="feedback-form__button">Заказать</button>
-            <span class="order-form__policy text-tiny">и принять
-              <a class="order-form__policy-link" href="/policy">Политику конфиденциальности</a>
-            </span>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-<div class="faq" id="faq" data-element="faq">
-    <div class="faq__cont cont">
-      <h2 class="faq__title title">Вопросы</h2>
-      <div class="faq__area">
-        <div class="faq__area-column">
-          <div class="faq__item">
-            <p class="faq__question text" data-element="faq__question">Что такое задник из кожкартона и зачем он нужен в обуви?</p>
-            <p class="faq__answer text-small" data-element="faq__answer">Задник из кожкартона — это уплотнённый элемент, который вставляется в заднюю часть обуви для удержания формы пятки. Он предотвращает деформацию обуви, улучшает посадку и делает ношение более комфортным.</p>
-          </div>
-          <div class="faq__item">
-            <p class="faq__question text" data-element="faq__question">Чем кожкартон лучше других материалов?</p>
-            <p class="faq__answer text-small" data-element="faq__answer">Кожкартон прочный, хорошо держит форму, при этом остаётся гибким. В отличие от пластиковых вставок, он «дышит» и более экологичен. Отличный выбор для ремонта обуви или при пошиве новой пары.</p>
-          </div>
-        </div>
-        <div class="faq__area-column">
-          <div class="faq__item">
-            <p class="faq__question text" data-element="faq__question">Подходит ли этот задник для ремонта любой обуви?</p>
-            <p class="faq__answer text-small" data-element="faq__answer">Да, задники из кожкартона универсальны и подойдут для большинства видов обуви — будь то кроссовки, ботинки, туфли или рабочая обувь. Важно правильно подобрать размер и аккуратно установить.</p>
-          </div>
-          <div class="faq__item">
-            <p class="faq__question text" data-element="faq__question">Как установить задник самостоятельно?</p>
-            <p class="faq__answer text-small" data-element="faq__answer">Задник можно установить вручную при помощи обувного клея. Для надёжной фиксации желательно немного разогреть кожкартон и плотно прижать его к внутренней части задника обуви. При необходимости — обратиться к мастеру.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-</div>
-  
+{{template "cap" .}}
+{{template "products" .}}
+{{template "showcase" .}}
+{{template "production" .}}
+{{template "order-steps" .}}
+{{template "order-form" .}}
+{{template "faq" .}}
 {{end}}
