--- a/internal/templates/client-templates/templates/components/_layout/footer.html
+++ b/internal/templates/client-templates/templates/components/_layout/footer.html
@@ -4,7 +4,7 @@
     <span class="footer__logo">
       <img class="footer__image" src="/static/client/images/logo.png" alt="Логотип">
     </span>
-    <a class="footer__policy-link link-dark text" href="/policy.html">Политика конфиденциальности</a>
+    <a class="footer__policy-link link-dark text" href="/policy">Политика конфиденциальности</a>
     <span class="footer__copyright text">© 2025 г. Все права защищены</span>
   </div>
 </footer>
