--- a/internal/templates/client-templates/templates/components/index/order-form.html
+++ b/internal/templates/client-templates/templates/components/index/order-form.html
@@ -4,9 +4,9 @@
       <div class="order-form__wrapper">
         <h2 class="order-form__title title">Заказать задник из кожкартона саламандер</h2>
         <p class="order-form__text text-big">Оставьте заявку, менеджер свяжется с вами для уточнения деталей</p>
-        <form class="order-form__form" data-role="feedback-form">
+        <form action="/send-order" method="POST" class="order-form__form" data-role="feedback-form">
           <div id="captcha-container"></div>
-          <input type="hidden" name="form_number" value="100">
+          <input type="hidden" name="form_number" value="99">
           <input type="hidden" name="form_name" value="Форма заказать задник из кожкартона саламандер">
           <div class="order-form__input-box">
             <input class="order-form__input order-form__input_name input text" type="text" placeholder="Имя" name="name">
