--- a/web/frontend-client/assets/views/components/policy.pug
+++ b/web/frontend-client/assets/views/components/policy.pug
@@ -264,5 +264,5 @@ article.policy
         li.
           В случае отзыва субъектом персональных данных или его представителем согласия на обработку персональных данных Администрация сайта праве продолжить обработку персональных в данных без согласия субъекта персональных данных при наличии оснований, указанных в пунктах 2 – 11 части 1 статьи 6, части 2 статьи 10 и части 2 статьи 11 Федерального закона №152-ФЗ «О персональных данных» от 26.06.2006 г.
       p.
-        Дата публикации 20 августа 2020 г.
-      p Дата обновления: 27 сентября 2024 г.
+        Дата публикации 21 апреля 2025 г.
+      p Дата обновления: 26 апреля 2025 г.
