--- a/web/frontend-client/assets/views/components/thank&error/thank.pug
+++ b/web/frontend-client/assets/views/components/thank&error/thank.pug
@@ -1,4 +1,4 @@
-mixin thanks404 (caption, textArr)
+mixin thanksOrError (caption, textArr)
   .thank
     .thank__cont.cont
       h1.thank__caption.caption= caption
