--- a/web/frontend-client/assets/views/pages/error.pug
+++ b/web/frontend-client/assets/views/pages/error.pug
@@ -6,4 +6,4 @@ block head
 
 block body
   include ../components/thank&error/thank
-  +thanks404('Ошибка', ['Такой страницы нет.'])
+  +thanksOrError('Ошибка', ['Такой страницы нет.'])
