--- a/internal/templates/client-templates/templates/components/_layout/header.html
+++ b/internal/templates/client-templates/templates/components/_layout/header.html
@@ -51,16 +51,32 @@
     <a class="header__phone header__phone_mobile link_gray" href="tel:+79536799464">+7 953 679-94-64</a>
     <ul class="menu__list-mobile">
       <li class="menu__item-mobile">
-        <span class="menu__span menu__link_nav">Главная</span>
+        {{if eq .View "index"}}
+          <span class="menu__span menu__link_nav">Главная</span>
+        {{else}}
+          <a class="menu__link menu__link_nav" href="/">Главная</a>
+        {{end}}
       </li>
       <li class="menu__item-mobile">
-        <a class="menu__link menu__link_nav" href="/delivery">Доставка</a>
+        {{if eq .View "delivery"}}
+          <span class="menu__span menu__link_nav">Доставка</span>
+        {{else}}
+          <a class="menu__link menu__link_nav" href="/delivery">Доставка</a>
+        {{end}}
       </li>
       <li class="menu__item-mobile">
-        <a class="menu__link menu__link_nav" href="/payment">Оплата</a>
+        {{if eq .View "payment"}}
+          <span class="menu__span menu__link_nav">Оплата</span>
+        {{else}}
+          <a class="menu__link menu__link_nav" href="/payment">Оплата</a>
+        {{end}}
       </li>
       <li class="menu__item-mobile">
-        <a class="menu__link menu__link_nav" href="/guarantee">Гарантия</a>
+        {{if eq .View "guarantee"}}
+          <span class="menu__span menu__link_nav">Гарантия</span>
+        {{else}}
+          <a class="menu__link menu__link_nav" href="/guarantee">Гарантия</a>
+        {{end}}
       </li>
     </ul>
   </div>
