--- a/internal/templates/client-templates/templates/components/index/order-form.html
+++ b/internal/templates/client-templates/templates/components/index/order-form.html
@@ -5,14 +5,13 @@
         <h2 class="order-form__title title">Заказать задник из кожкартона саламандер</h2>
         <p class="order-form__text text-big">Оставьте заявку, менеджер свяжется с вами для уточнения деталей</p>
         <form action="/send-order" method="POST" class="order-form__form" data-role="feedback-form">
-          <div id="captcha-container"></div>
           <input type="hidden" name="form_number" value="99">
           <input type="hidden" name="form_name" value="Форма заказать задник из кожкартона саламандер">
           <div class="order-form__input-box">
-            <input class="order-form__input order-form__input_name input text" type="text" placeholder="Имя" name="name">
+            <input class="order-form__input order-form__input_name input text" type="text" placeholder="Имя" maxlength="100" name="name">
           </div>
           <div class="order-form__input-box">
-            <input class="order-form__input order-form__input_phone input text" type="tel" placeholder="Телефон*" name="phone" data-role="feedback-form__phone-input">
+            <input class="order-form__input order-form__input_phone input text" type="tel" placeholder="Телефон*" name="phone" data-role="feedback-form__phone-input" pattern="^\\+?[\\d]+(\\(\\d+\\)|\\-|\\s)?+\\d+$" minlength="6" maxlength="15">
             <span class="order-form__text-error text-error text-error_hide" data-role="feedback-form__text-error">*Неверный номер телефона</span>
           </div>
           <div class="order-form__btn-box order-form__input-box_name">
