Update font paths to use relative URLs instead of static directory

--- a/web/frontend-client/assets/styles/tools/fonts.sass
+++ b/web/frontend-client/assets/styles/tools/fonts.sass
@@ -1,13 +1,13 @@
 @font-face
   font-family: 'Montserrat'
-  src: url('/statics/fonts/montserrat.woff2') format('woff2'), url('/statics/fonts/montserrat.woff') format('woff')
+  src: url('../fonts/montserrat.woff2') format('woff2'), url('../fonts/montserrat.woff') format('woff')
   font-weight: 400
   font-style: normal
   font-display: block
 
 @font-face
   font-family: 'Montserrat'
-  src: url('/statics/fonts/montserratbold.woff2') format('woff2'), url('/statics/fonts/montserratbold.woff') format('woff')
+  src: url('../fonts/montserratbold.woff2') format('woff2'), url('../fonts/montserratbold.woff') format('woff')
   font-weight: 700
   font-style: normal
   font-display: block
