--- a/web/frontend-client/assets/views/components/index/order-form.pug
+++ b/web/frontend-client/assets/views/components/index/order-form.pug
@@ -15,7 +15,7 @@
               type="tel",
               placeholder="Телефон*",
               name="phone",
-              pattern="^[+]?([0-9]+[\\(\\)\\-\\s]?)+$",
+              pattern="^[+]?([0-9]+(\(|\)|\-|\s)?)+$",
               minlength="6",
               maxlength="15",
               data-role="feedback-form__phone-input"
