--- a/web/frontend-admin/assets/styles/components/products-index.sass
+++ b/web/frontend-admin/assets/styles/components/products-index.sass
@@ -10,8 +10,8 @@
   margin-bottom: 30px
   gap: 20px
   @include media(1240)
+    margin-top: 15px
     margin-bottom: 9px
-
   @include media(520px)
     flex-direction: column
     align-items: stretch
